# OGL3Julia

./: CMakeLists.txt  FractalRendererGL.cpp  FractalRendererGL.h  README.md  fgtShader.glsl  main.cpp  vrtShader.glsl
